--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>datafreak79.ch</title>
-
-  <!-- Einfache, einheitliche CSS-Styles -->
   <style>
-    /* Reset / Grundlegendes Box-Model */
+    /* Reset */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -16,11 +14,11 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f9fa; /* Helles Grau für den Seitenhintergrund */
+      background-color: #f8f9fa; /* Hellgrauer Seitenhintergrund */
       color: #333;
     }
 
-    /* Container sorgt für horizontale Einrückung und max. Breite */
+    /* Container für zentrierte Inhalte */
     .container {
       width: 90%;
       max-width: 1100px;
@@ -28,39 +26,54 @@
       padding: 20px 0;
     }
 
+    /* Header */
     header {
       background-color: #0078d7; /* Blau */
       color: #fff;
+    }
+    header .header-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       padding: 20px 0;
-      margin-bottom: 20px;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    nav ul {
-      list-style: none;
-      margin: 10px 0 0 0;
-      padding: 0;
-    }
-    nav li {
-      display: inline-block;
-      margin-right: 15px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
+    header .logo {
+      font-size: 1.5rem;
       font-weight: bold;
     }
-    nav a.btn {
-      background-color: #fff;
-      color: #0078d7;
-      padding: 8px 12px;
-      border-radius: 4px;
+    /* Navigation */
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+    /* Hamburger-Icon (Mobile) */
+    .nav-toggle {
+      display: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+    @media (max-width: 768px) {
+      nav ul {
+        display: none; /* ausgeblendet, bis getoggelt wird */
+        flex-direction: column;
+        background-color: #0078d7;
+        padding: 10px;
+      }
+      nav ul.open {
+        display: flex; /* sichtbar, wenn geöffnet */
+      }
+      .nav-toggle {
+        display: block; /* Hamburger-Icon einblenden */
+      }
     }
 
-    /* Hauptinhalte (Sections) */
+    /* Hauptsektionen */
     section {
       margin-bottom: 40px;
     }
@@ -73,34 +86,13 @@
       line-height: 1.6;
       font-size: 1rem;
     }
-
-    /* Buttons */
-    .btn {
-      background-color: #0078d7;
-      color: #fff;
-      padding: 10px 15px;
-      text-decoration: none;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-    }
-    .btn:hover {
-      background-color: #005fad;
+    ul {
+      list-style: disc;
+      margin-left: 1.5em;
+      margin-bottom: 1em;
     }
 
-    /* Footer */
-    footer {
-      background-color: #e9ecef;
-      padding: 15px 0;
-      text-align: center;
-    }
-    footer p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    /* Links in normalem Text */
+    /* Links im Text */
     a {
       color: #0078d7;
       text-decoration: none;
@@ -108,184 +100,240 @@
     a:hover {
       text-decoration: underline;
     }
+
+    /* Footer */
+    footer {
+      background-color: #e9ecef;
+      text-align: center;
+      padding: 15px 0;
+    }
+    footer p {
+      margin: 0;
+      font-size: 0.9rem;
+      color: #555;
+    }
   </style>
 </head>
 <body>
 
-  <header>
+<header>
+  <div class="container header-content">
+    <div class="logo">datafreak79.ch</div>
+    <!-- Hamburger-Icon -->
+    <div class="nav-toggle" onclick="toggleMenu()">&#9776;</div>
+    <nav>
+      <ul id="nav-list">
+        <li><a href="#ueber-mich">Über mich</a></li>
+        <li><a href="#projekte">Projekte</a></li>
+        <li><a href="#links">Links</a></li>
+        <li><a href="#cv">CV</a></li>
+        <li><a href="#diplome">Diplome</a></li>
+        <li><a href="#zeugnisse">Zeugnisse</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<main>
+  <!-- Über mich -->
+  <section id="ueber-mich">
     <div class="container">
-      <h1>Willkommen auf datafreak79.ch</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="Lebenslauf_2025.pdf" target="_blank" class="btn">
-              📄 Lebenslauf als PDF
-            </a>
-          </li>
-          <li>
-            <a href="#projects">Projekte</a>
-          </li>
-          <li>
-            <a href="#contact">Kontakt</a>
-          </li>
-        </ul>
-      </nav>
+      <h2>Über mich</h2>
+      <p>
+        Gemeinsam mit meiner Partnerin und unserem Hund lebe ich in einem
+        Doppeleinfamilienhaus in Koppigen. Ich bin ein Mensch, der immer in
+        Bewegung ist – es muss stets etwas los sein. Sport betreibe ich recht
+        viel, wobei dies in letzter Zeit etwas zu kurz gekommen ist.
+      </p>
+      <p>
+        Mit über 45 Jahren bin ich als Projektleiter in der Infrastruktur
+        für Verteilnetze tätig und habe mich entschieden, mich intensiver
+        mit Daten zu beschäftigen. In meiner aktuellen Rolle kann ich meine
+        Leidenschaft für Daten und Programmierung nur eingeschränkt ausleben,
+        was mir in den vergangenen Monaten immer bewusster wurde.
+      </p>
+      <p>
+        Die Fähigkeiten, die ich im Weiterbildungskurs
+        <em>Data Scientist NDK HF</em> erworben habe, möchte ich nun in
+        die Praxis umsetzen. Seit ich 2019 beim Hausbau meine erste
+        Excel-Makrodatei zur Erstellung des Elektroinstallationsmaterials
+        entwickelt habe, bin ich fasziniert von Daten und Programmierung.
+      </p>
+      <p>
+        Nachdem ich lange Zeit nur mit VBA gearbeitet hatte, begann ich 2022
+        damit, mich intensiv mit Power BI und Power Query zu beschäftigen.
+        Dabei entstand unter anderem eine App zur Abfrage meiner persönlichen
+        Bankdaten (via CSV-Stammdaten). Im Herbst 2023 entschied ich mich für
+        den Lehrgang <em>Data Scientist NDK HF</em> und entdeckte dabei die
+        faszinierende Welt von SQL und R.
+      </p>
+      <p>
+        In meiner Freizeit beschäftige ich mich nicht nur mit Daten, sondern
+        lerne auch Sprachen – aktuell Englisch und Französisch – und entwickle
+        begeistert Shiny-Apps. Ein Prototyp zum Sprachenlernen ist bereits
+        online verfügbar (siehe <a href="#projekte">Projekte</a>).
+      </p>
     </div>
-  </header>
+  </section>
 
-  <main>
-    <!-- Ueber mich -->
-    <section id="about">
-      <div class="container">
-        <h2>Über mich</h2>
-        <p>
-          Nachdem ich mit über 45 Jahren beruflich als Projektleiter in der Infrastruktur
-          für Verteilnetze tätig bin, habe ich mich entschieden, mich in der Welt der
-          Daten zu vertiefen.
-        </p>
-        <p>
-          In meiner aktuellen Tätigkeit kann ich meine Leidenschaft für Daten und
-          Programmierung nur bedingt ausleben. Dies habe ich in den letzten Monaten
-          festgestellt.
-        </p>
-        <p>
-          Die Skills, die ich mir beim Weiterbildungskurs "Data Scientist NDK HF"
-          aneignen konnte, möchte ich nun in der Praxis anwenden.
-        </p>
-        <p>
-          Seit ich beim Hausbau 2019 meine erste Excel-Makrodatei für die Erstellung
-          des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der
-          Welt der Daten und der Programmierung. Neben meiner Tätigkeit als Projektleiter
-          im Verteilnetz für die Elektroversorgung beschäftige ich mich seither
-          leidenschaftlich mit Daten.
-        </p>
-        <p>
-          Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit, mich
-          intensiv mit Power BI und Power Query auseinanderzusetzen. Unter anderem
-          entwickelte ich eine App zur Abfrage meiner persönlichen Bankdaten
-          (via CSV-Stammdaten).
-        </p>
-        <p>
-          Im Herbst 2023 entschied ich mich, den Lehrgang "Data Scientist NDK HF" zu
-          besuchen und entdeckte dabei die faszinierende Welt von SQL und R.
-        </p>
-        <p>
-          In meiner Freizeit widme ich mich neben Daten auch Sprachen – aktuell lerne
-          ich Englisch und Französisch – und entwickle begeistert Shiny-Apps. Ein
-          Prototyp zum Sprachenlernen ist bereits online verfügbar (siehe Buttons).
-        </p>
-      </div>
-    </section>
-
-    <!-- Kontakt -->
-    <section id="contact">
-      <div class="container">
-        <h2>Kontakt</h2>
-        <p><strong>Adresse:</strong></p>
-        <p class="address">
-          St. Niklausstrasse 8a<br>
-          3425 Koppigen, Schweiz
-        </p>
-        <p>
-          <strong>Telefonnummer:</strong> +41 79 765 46 44
-        </p>
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:matthias.kuhn1979@gmail.com">
-            matthias.kuhn1979@gmail.com
-          </a>
-        </p>
-        <p>
-          <strong>LinkedIn:</strong>
-          <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">
-            linkedin.com/in/matthiaskuhn1979/
-          </a>
-        </p>
-      </div>
-    </section>
-
-    <!-- Projekte -->
-    <section id="projects">
-      <div class="container">
-        <h2>Projekte</h2>
-        <p>
-          Quiz Sprachen lernen: Eine Shiny-App, die das Lernen von
-          Vokabeln und Grammatik in verschiedenen Sprachen unterstützt.
-        </p>
-        <p>
-          <strong>English App:</strong>
-          <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/"
-             target="_blank">
-            English APP Desktop
-          </a>
-        </p>
-      </div>
-    </section>
-
-    <!-- Links DataScience -->
-    <section id="datascience">
-      <div class="container">
-        <h2>Links DataScience</h2>
-        <p>
-          Im Folgenden findest du einige hilfreiche Ressourcen, um
-          deine Data-Science-Kenntnisse zu vertiefen:
-        </p>
-        <ul>
-          <li>
-            <a href="https://r4ds.had.co.nz/" target="_blank">
-              R for Data Science (Hadley Wickham)
-            </a>
-            – Ausführliches Online-Buch zu R, Datenanalyse und Visualisierung.
-          </li>
-          <li>
-            <a href="https://www.kaggle.com/" target="_blank">
-              Kaggle
-            </a>
-            – Plattform für Data-Science-Wettbewerbe, Datasets und Tutorials.
-          </li>
-          <li>
-            <a href="https://towardsdatascience.com/" target="_blank">
-              Towards Data Science
-            </a>
-            – Große Sammlung von Artikeln zu Machine Learning, Python, R und mehr.
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Lebenslauf als Word (Passwortschutz) -->
-    <section id="word-cv">
-      <div class="container">
-        <h2>Lebenslauf als Word</h2>
-        <p>
-          Dieser Bereich ist passwortgeschützt. Bitte das Passwort eingeben, um
-          den Word-Lebenslauf zu öffnen.
-        </p>
-        <!-- Button, der den Passwort-Dialog öffnet -->
-        <button class="btn" onclick="promptForPassword()">
-          Zum Lebenslauf (Word)
-        </button>
-      </div>
-    </section>
-  </main>
-
-  <footer>
+  <!-- Projekte -->
+  <section id="projekte">
     <div class="container">
-      <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
+      <h2>Projekte</h2>
+      <p>
+        <strong>Sprachapp (R-Shiny)</strong><br>
+        Diese App wurde in RStudio entwickelt und ermöglicht Übersetzungen in
+        vier Sprachen (Englisch, Französisch, Spanisch, Italienisch). Vokabeln
+        können in selbst erstellbaren Sammlungen abgespeichert werden.
+      </p>
+      <p>
+        <a href="Lernvideo_Sprachapp.mp4" target="_blank">
+          Lernvideo zur Sprachapp
+        </a> (MP4-Datei)
+      </p>
+      <p>
+        <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/"
+           target="_blank">
+          Sprachapp (R-Shiny Desktop-Version)
+        </a>
+      </p>
+      <p>
+        <strong>Blog "Road to Exeter"</strong><br>
+        Hier dokumentiere ich meine Fortschritte beim Englischlernen und berichte
+        über meine Erfahrungen in Exeter (Link ggf. ergänzen).
+      </p>
     </div>
-  </footer>
+  </section>
 
-  <!-- Einfaches JavaScript zur Passwortabfrage -->
-  <script>
-    function promptForPassword() {
-      const password = prompt("Bitte Passwort eingeben:");
-      // Hier das Passwort anpassen, wenn gewünscht
-      if (password === "LL_MK$2025") {
-        window.open("Lebenslauf_2025.docx", "_blank");
-      } else if (password !== null) {
-        alert("Falsches Passwort!");
-      }
-    }
-  </script>
+  <!-- Links -->
+  <section id="links">
+    <div class="container">
+      <h2>Links</h2>
+      <ul>
+        <li>
+          <strong>Englisch:</strong>
+          <a href="https://exeteracademy.co.uk/" target="_blank">
+            Exeter Academy
+          </a>
+          – Sprachschule in Exeter für Englischunterricht
+        </li>
+        <li>
+          <strong>R for Data Science (Hadley Wickham):</strong>
+          <a href="https://r4ds.had.co.nz/" target="_blank">
+            https://r4ds.had.co.nz/
+          </a>
+          – Umfangreiches Online-Buch zu R, Datenanalyse und Visualisierung
+        </li>
+        <li>
+          <strong>Kaggle:</strong>
+          <a href="https://www.kaggle.com/" target="_blank">
+            https://www.kaggle.com/
+          </a>
+          – Plattform für Data-Science-Wettbewerbe, Datasets und Tutorials
+        </li>
+        <li>
+          <strong>Towards Data Science:</strong>
+          <a href="https://towardsdatascience.com/" target="_blank">
+            https://towardsdatascience.com/
+          </a>
+          – Sammlung von Artikeln zu Machine Learning, Python, R und mehr
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- CV -->
+  <section id="cv">
+    <div class="container">
+      <h2>Lebenslauf (CV)</h2>
+      <p>
+        Hier findest du meinen aktuellen Lebenslauf als PDF:
+      </p>
+      <p>
+        <a href="Lebenslauf_2025.pdf" target="_blank">
+          Lebenslauf_2025.pdf
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Diplome -->
+  <section id="diplome">
+    <div class="container">
+      <h2>Diplome</h2>
+      <p>
+        Hier sind meine wichtigsten Zertifikate und Diplome zusammengefasst:
+      </p>
+      <p>
+        <a href="Diplome.pdf" target="_blank">
+          Diplome.pdf
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Zeugnisse -->
+  <section id="zeugnisse">
+    <div class="container">
+      <h2>Zeugnisse</h2>
+      <p>
+        <strong>Schulzeugnisse:</strong><br>
+        <a href="Schulzeugnisse.pdf" target="_blank">
+          Schulzeugnisse.pdf
+        </a>
+      </p>
+      <p>
+        <strong>Arbeitszeugnisse:</strong><br>
+        <a href="Arbeitszeugnisse.pdf" target="_blank">
+          Arbeitszeugnisse.pdf
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Kontakt -->
+  <section id="kontakt">
+    <div class="container">
+      <h2>Kontakt</h2>
+      <p>
+        <strong>Adresse:</strong><br>
+        St. Niklausstrasse 8a<br>
+        3425 Koppigen, Schweiz
+      </p>
+      <p>
+        <strong>Mobile:</strong> +41 79 765 46 44
+      </p>
+      <p>
+        <strong>E-Mail:</strong>
+        <a href="mailto:matthias.kuhn1979@gmail.com">
+          matthias.kuhn1979@gmail.com
+        </a>
+      </p>
+      <p>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/matthiaskuhn1979/"
+           target="_blank">
+          linkedin.com/in/matthiaskuhn1979/
+        </a>
+      </p>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="container">
+    <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
+  </div>
+</footer>
+
+<!-- JavaScript für die mobile Navigation -->
+<script>
+  function toggleMenu() {
+    const navList = document.getElementById('nav-list');
+    navList.classList.toggle('open');
+  }
+</script>
+
 </body>
 </html>
