--- a/index.html
+++ b/index.html
@@ -1,21 +1,269 @@
-<!-- CV -->
-<section id="cv">
-  <div class="container">
-    <h2>Lebenslauf (CV)</h2>
-    <p>
-      Hier findest du meinen aktuellen Lebenslauf als PDF:
-    </p>
-    <p>
-      <a href="#" onclick="loadPDF('Lebenslauf_2025.pdf', 'pdfViewer'); return false;">
-        Lebenslauf_2025.pdf
-      </a>
-    </p>
-    <p>
-      <a href="#" onclick="downloadDoc(); return false;">
-        Lebenslauf als DOC (passwortgeschützt)
-      </a>
-    </p>
-    <!-- PDF inline anzeigen -->
-    <iframe id="pdfViewer" style="width:100%; height:600px; border:none; display:none;"></iframe>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>datafreak79.ch</title>
+  <style>
+    /* ...existing CSS... */
+
+    /* Alle Sektionen zunächst ausblenden */
+    main section {
+      display: none;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <div class="container header-content">
+    <div class="logo">datafreak79.ch</div>
+    <!-- Hamburger-Icon -->
+    <div class="nav-toggle" onclick="toggleMenu()">&#9776;</div>
+    <nav>
+      <ul id="nav-list">
+        <li><a href="#" onclick="showSection('ueber-mich'); return false;">Über mich</a></li>
+        <li><a href="#" onclick="showSection('projekte'); return false;">Projekte</a></li>
+        <li><a href="#" onclick="showSection('links'); return false;">Links</a></li>
+        <li><a href="#" onclick="showSection('cv'); return false;">CV</a></li>
+        <li><a href="#" onclick="showSection('diplome'); return false;">Diplome</a></li>
+        <li><a href="#" onclick="showSection('zeugnisse'); return false;">Zeugnisse</a></li>
+        <li><a href="#" onclick="showSection('kontakt'); return false;">Kontakt</a></li>
+      </ul>
+    </nav>
   </div>
-</section>
+</header>
+
+<main>
+  <!-- Über mich -->
+  <section id="ueber-mich">
+    <div class="container">
+      <h2>Über mich</h2>
+      <p>
+        Gemeinsam mit meiner Partnerin und unserem Hund lebe ich in einem
+        Doppeleinfamilienhaus in Koppigen. Ich bin ein Mensch, der immer in
+        Bewegung ist – es muss stets etwas los sein. Sport betreibe ich recht
+        viel, wobei dies in letzter Zeit etwas zu kurz gekommen ist.
+      </p>
+      <p>
+        Mit über 45 Jahren bin ich als Projektleiter in der Infrastruktur
+        für Verteilnetze tätig und habe mich entschieden, mich intensiver
+        mit Daten zu beschäftigen. In meiner aktuellen Rolle kann ich meine
+        Leidenschaft für Daten und Programmierung nur eingeschränkt ausleben,
+        was mir in den vergangenen Monaten immer bewusster wurde.
+      </p>
+      <p>
+        Die Fähigkeiten, die ich im Weiterbildungskurs
+        <em>Data Scientist NDK HF</em> erworben habe, möchte ich nun in
+        die Praxis umsetzen. Seit ich 2019 beim Hausbau meine erste
+        Excel-Makrodatei zur Erstellung des Elektroinstallationsmaterials
+        entwickelt habe, bin ich fasziniert von Daten und Programmierung.
+      </p>
+      <p>
+        Nachdem ich lange Zeit nur mit VBA gearbeitet hatte, begann ich 2022
+        damit, mich intensiv mit Power BI und Power Query zu beschäftigen.
+        Dabei entstand unter anderem eine App zur Abfrage meiner persönlichen
+        Bankdaten (via CSV-Stammdaten). Im Herbst 2023 entschied ich mich für
+        den Lehrgang <em>Data Scientist NDK HF</em> und entdeckte dabei die
+        faszinierende Welt von SQL und R.
+      </p>
+      <p>
+        In meiner Freizeit beschäftige ich mich nicht nur mit Daten, sondern
+        lerne auch Sprachen – aktuell Englisch und Französisch – und entwickle
+        begeistert Shiny-Apps. Ein Prototyp zum Sprachenlernen ist bereits
+        online verfügbar (siehe <a href="#" onclick="showSection('projekte'); return false;">Projekte</a>).
+      </p>
+    </div>
+  </section>
+
+  <!-- Projekte -->
+  <section id="projekte">
+    <div class="container">
+      <h2>Projekte</h2>
+      <p>
+        <strong>Sprachapp (R-Shiny)</strong><br>
+        Diese App wurde in RStudio entwickelt und ermöglicht Übersetzungen in
+        vier Sprachen (Englisch, Französisch, Spanisch, Italienisch). Vokabeln
+        können in selbst erstellbaren Sammlungen abgespeichert werden.
+      </p>
+      <p>
+        <a href="Lernvideo_Sprachapp.mp4" target="_blank">
+          Lernvideo zur Sprachapp
+        </a> (MP4-Datei)
+      </p>
+      <p>
+        <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/"
+           target="_blank">
+          Sprachapp (R-Shiny Desktop-Version)
+        </a>
+      </p>
+      <p>
+        <strong>Blog "Road to Exeter"</strong><br>
+        Hier dokumentiere ich meine Fortschritte beim Englischlernen und berichte
+        über meine Erfahrungen in Exeter (Link ggf. ergänzen).
+      </p>
+    </div>
+  </section>
+
+  <!-- Links -->
+  <section id="links">
+    <div class="container">
+      <h2>Links</h2>
+      <ul>
+        <li>
+          <strong>Englisch:</strong>
+          <a href="https://exeteracademy.co.uk/" target="_blank">
+            Exeter Academy
+          </a>
+          – Sprachschule in Exeter für Englischunterricht
+        </li>
+        <li>
+          <strong>R for Data Science (Hadley Wickham):</strong>
+          <a href="https://r4ds.had.co.nz/" target="_blank">
+            https://r4ds.had.co.nz/
+          </a>
+          – Umfangreiches Online-Buch zu R, Datenanalyse und Visualisierung
+        </li>
+        <li>
+          <strong>Kaggle:</strong>
+          <a href="https://www.kaggle.com/" target="_blank">
+            https://www.kaggle.com/
+          </a>
+          – Plattform für Data-Science-Wettbewerbe, Datasets und Tutorials
+        </li>
+        <li>
+          <strong>Towards Data Science:</strong>
+          <a href="https://towardsdatascience.com/" target="_blank">
+            https://towardsdatascience.com/
+          </a>
+          – Sammlung von Artikeln zu Machine Learning, Python, R und mehr
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- CV -->
+  <section id="cv">
+    <div class="container">
+      <h2>Lebenslauf (CV)</h2>
+      <p>
+        Hier findest du meinen aktuellen Lebenslauf als PDF:
+      </p>
+      <p>
+        <a href="Lebenslauf_2025.pdf" target="_blank">
+          Lebenslauf_2025.pdf
+        </a>
+      </p>
+      <p>
+        <a href="#" onclick="downloadDoc(); return false;">
+          Lebenslauf als DOC (passwortgeschützt)
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Diplome -->
+  <section id="diplome">
+    <div class="container">
+      <h2>Diplome</h2>
+      <p>
+        Hier sind meine wichtigsten Zertifikate und Diplome zusammengefasst:
+      </p>
+      <p>
+        <a href="Diplome.pdf" target="_blank">
+          Diplome.pdf
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Zeugnisse -->
+  <section id="zeugnisse">
+    <div class="container">
+      <h2>Zeugnisse</h2>
+      <p>
+        <strong>Schulzeugnisse:</strong><br>
+        <a href="Schulzeugnisse.pdf" target="_blank">
+          Schulzeugnisse.pdf
+        </a>
+      </p>
+      <p>
+        <strong>Arbeitszeugnisse:</strong><br>
+        <a href="Arbeitszeugnisse.pdf" target="_blank">
+          Arbeitszeugnisse.pdf
+        </a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Kontakt -->
+  <section id="kontakt">
+    <div class="container">
+      <h2>Kontakt</h2>
+      <p>
+        <strong>Adresse:</strong><br>
+        St. Niklausstrasse 8a<br>
+        3425 Koppigen, Schweiz
+      </p>
+      <p>
+        <strong>Mobile:</strong> +41 79 765 46 44
+      </p>
+      <p>
+        <strong>E-Mail:</strong>
+        <a href="mailto:matthias.kuhn1979@gmail.com">
+          matthias.kuhn1979@gmail.com
+        </a>
+      </p>
+      <p>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/matthiaskuhn1979/"
+           target="_blank">
+          linkedin.com/in/matthiaskuhn1979/
+        </a>
+      </p>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="container">
+    <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
+  </div>
+</footer>
+
+<!-- JavaScript für Navigation, mobile Navigation & zusätzliche Funktionen -->
+<script>
+  function toggleMenu() {
+    const navList = document.getElementById('nav-list');
+    navList.classList.toggle('open');
+  }
+
+  function showSection(id) {
+    // Alle Sektionen ausblenden
+    const sections = document.querySelectorAll('main section');
+    sections.forEach(sec => sec.style.display = 'none');
+    // Gewählte Sektion einblenden
+    const section = document.getElementById(id);
+    if(section){
+      section.style.display = 'block';
+    }
+  }
+
+  // Bei Seitenstart soll "Über mich" angezeigt werden
+  document.addEventListener("DOMContentLoaded", function() {
+    showSection('ueber-mich');
+  });
+
+  function downloadDoc() {
+    var password = prompt("Bitte Passwort eingeben:");
+    // Ersetze 'DEIN_PASSWORT' durch das gewünschte Passwort
+    if(password === "LL_PW$2025") {
+      window.location.href = "Lebenslauf_2025.doc";
+    } else {
+      alert("Falsches Passwort!");
+    }
+  }
+</script>
+
+</body>
+</html>
