--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 <section id="cv">
 <footer>
   <div class="container">
-    <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
+    <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ und Elan von Matthias Kuhn</p>
   </div>
 </footer>
   function toggleMenu() {
