--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     .nav-toggle {
       cursor: pointer;
       font-size: 1.5rem;
+      display: none; /* Standardmäßig ausblenden, außer bei kleineren Bildschirmen */
     }
     main {
       max-width: 1200px;
@@ -85,6 +86,22 @@
       color: #fff;
       text-align: center;
       padding: 15px 0;
+    }
+    /* Mobile Styles */
+    @media (max-width: 768px) {
+      .nav-toggle {
+        display: block;
+      }
+      nav ul {
+        flex-direction: column;
+        display: none; /* Navigation ausgeblendet */
+      }
+      nav ul.open {
+        display: flex; /* Navigation sichtbar, wenn .open vorhanden ist */
+      }
+      nav ul li {
+        margin: 5px 0;
+      }
     }
   </style>
 </head>
@@ -232,9 +249,14 @@
     if(section){
       section.style.display = 'block';
     }
+    // Mobile Navigation (falls geöffnet) wieder schließen
+    const navList = document.getElementById('nav-list');
+    if(navList.classList.contains('open')) {
+      navList.classList.remove('open');
+    }
   }
 
-  // Bei Seitenstart soll "Über mich" angezeigt werden
+  // Bei Seitenstart "Über mich" anzeigen
   document.addEventListener("DOMContentLoaded", function() {
     showSection('ueber-mich');
   });
@@ -254,6 +276,3 @@
     }
   }
 </script>
-
-</body>
-</html>
