--- a/index.html
+++ b/index.html
@@ -1,278 +1,19 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>datafreak79.ch</title>
-  <!-- Google Fonts: Montserrat -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 20px;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #007acc;
-      color: white;
-      padding: 20px;
-    }
-    .header-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .logo {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-    }
-    nav ul li {
-      margin: 0 5px;
-    }
-    nav ul li a {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #005f99;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 1.1rem;
-      transition: background-color 0.3s;
-    }
-    nav ul li a:hover {
-      background-color: #004f80;
-    }
-    .nav-toggle {
-      cursor: pointer;
-      font-size: 1.5rem;
-      display: none; /* Standardmäßig ausblenden, außer bei kleineren Bildschirmen */
-    }
-    main {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 0 20px;
-    }
-    main section {
-      display: none;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    #ueber-mich { background-color: #fff9e6; }
-    #projekte   { background-color: #e6f7ff; }
-    #links      { background-color: #fff9e6; }
-    #cv         { background-color: #e6ffea; }
-    #diplome    { background-color: #ffe6f9; }
-    #zeugnisse  { background-color: #e6f7ff; }
-    #kontakt    { background-color: #ffe6e6; }
-    h2 {
-      font-size: 2.5rem;
-      margin-top: 0;
-    }
-    footer {
-      background-color: #007acc;
-      color: #fff;
-      text-align: center;
-      padding: 15px 0;
-    }
-    /* Mobile Styles */
-    @media (max-width: 768px) {
-      .nav-toggle {
-        display: block;
-      }
-      nav ul {
-        flex-direction: column;
-        display: none; /* Navigation ausgeblendet */
-      }
-      nav ul.open {
-        display: flex; /* Navigation sichtbar, wenn .open vorhanden ist */
-      }
-      nav ul li {
-        margin: 5px 0;
-      }
-    }
-  </style>
-</head>
-<body>
-
-<header>
-  <div class="container header-content">
-    <div class="logo">datafreak79.ch</div>
-    <!-- Hamburger-Icon -->
-    <div class="nav-toggle" onclick="toggleMenu()">&#9776;</div>
-    <nav>
-      <ul id="nav-list">
-        <li><a href="#" onclick="showSection('ueber-mich'); return false;">Über mich</a></li>
-        <li><a href="#" onclick="showSection('projekte'); return false;">Projekte</a></li>
-        <li><a href="#" onclick="showSection('links'); return false;">Links</a></li>
-        <li><a href="#" onclick="showSection('cv'); return false;">CV</a></li>
-        <li><a href="#" onclick="showSection('diplome'); return false;">Diplome</a></li>
-        <li><a href="#" onclick="showSection('zeugnisse'); return false;">Zeugnisse</a></li>
-        <li><a href="#" onclick="showSection('kontakt'); return false;">Kontakt</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
-<main>
-  <!-- Über mich -->
-  <section id="ueber-mich">
-    <div class="container">
-      <h2>Über mich</h2>
-      <p>
-        Gemeinsam mit meiner Partnerin und unserem Hund lebe ich in einem Doppeleinfamilienhaus in Koppigen...
-      </p>
-    </div>
-  </section>
-
-  <!-- Projekte -->
-  <section id="projekte">
-    <div class="container">
-      <h2>Projekte</h2>
-      <p>
-        <strong>Sprachapp (R-Shiny)</strong><br>
-        Diese App wurde in RStudio entwickelt...
-      </p>
-      <p>
-        <video controls style="max-width:100%;">
-          <source src="Lernvideo_Sprachapp.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </p>
-    </div>
-  </section>
-
-  <!-- Links -->
-  <section id="links">
-    <div class="container">
-      <h2>Links</h2>
-      <ul>
-        <li>
-          <strong>Englisch:</strong>
-          <a href="https://exeteracademy.co.uk/" target="_blank">Exeter Academy</a>
-          – Sprachschule in Exeter
-        </li>
-        <!-- Weitere Links -->
-      </ul>
-    </div>
-  </section>
-
-  <!-- CV -->
-  <section id="cv">
-    <div class="container">
-      <h2>Lebenslauf (CV)</h2>
-      <p>Hier findest du meinen aktuellen Lebenslauf als PDF:</p>
-      <p>
-        <a href="#" onclick="loadPDF('Lebenslauf_2025.pdf', 'pdfViewer'); return false;">Lebenslauf_2025.pdf</a>
-      </p>
-      <p>
-        <a href="#" onclick="downloadDoc(); return false;">Lebenslauf als DOC (passwortgeschützt)</a>
-      </p>
-      <iframe id="pdfViewer" style="width:100%; height:600px; border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Diplome -->
-  <section id="diplome">
-    <div class="container">
-      <h2>Diplome</h2>
-      <p>
-        <a href="#" onclick="loadPDF('Diplome.pdf', 'pdfViewerDiplome'); return false;">Diplome.pdf</a>
-      </p>
-      <iframe id="pdfViewerDiplome" style="width:100%; height:600px; border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Zeugnisse -->
-  <section id="zeugnisse">
-    <div class="container">
-      <h2>Zeugnisse</h2>
-      <p>
-        <strong>Schulzeugnisse:</strong><br>
-        <a href="#" onclick="loadPDF('Schulzeugnisse.pdf', 'pdfViewerSchul'); return false;">Schulzeugnisse.pdf</a>
-      </p>
-      <iframe id="pdfViewerSchul" style="width:100%; height:600px; border:none; display:none;"></iframe>
-      <p>
-        <strong>Arbeitszeugnisse:</strong><br>
-        <a href="#" onclick="loadPDF('Arbeitszeugnisse.pdf', 'pdfViewerArbeits'); return false;">Arbeitszeugnisse.pdf</a>
-      </p>
-      <iframe id="pdfViewerArbeits" style="width:100%; height:600px; border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Kontakt -->
-  <section id="kontakt">
-    <div class="container">
-      <h2>Kontakt</h2>
-      <p><strong>Adresse:</strong><br>St. Niklausstrasse 8a<br>3425 Koppigen, Schweiz</p>
-      <p><strong>Mobile:</strong> +41 79 765 46 44</p>
-      <p><strong>E-Mail:</strong>
-        <a href="mailto:matthias.kuhn1979@gmail.com">matthias.kuhn1979@gmail.com</a>
-      </p>
-      <p><strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">linkedin.com/in/matthiaskuhn1979/</a>
-      </p>
-    </div>
-  </section>
-</main>
-
-<footer>
+<!-- Projekte -->
+<section id="projekte">
   <div class="container">
-    <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ und Elan von Matthias Kuhn</p>
+    <h2>Projekte</h2>
+    <p>
+      <strong>Sprachapp (R-Shiny)</strong><br>
+      Diese App wurde in RStudio entwickelt...
+    </p>
+    <p>
+      <video controls style="max-width:100%;">
+        <source src="Lernvideo_Sprachapp.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </p>
+    <p>
+      <a href="https://example.com/english-app" target="_blank">Englisch App</a>
+    </p>
   </div>
-</footer>
-
-<script>
-  function toggleMenu() {
-    const navList = document.getElementById('nav-list');
-    navList.classList.toggle('open');
-  }
-
-  function showSection(id) {
-    // Alle Sektionen ausblenden
-    const sections = document.querySelectorAll('main section');
-    sections.forEach(sec => sec.style.display = 'none');
-    // Gewählte Sektion einblenden
-    const section = document.getElementById(id);
-    if(section){
-      section.style.display = 'block';
-    }
-    // Mobile Navigation (falls geöffnet) wieder schließen
-    const navList = document.getElementById('nav-list');
-    if(navList.classList.contains('open')) {
-      navList.classList.remove('open');
-    }
-  }
-
-  // Bei Seitenstart "Über mich" anzeigen
-  document.addEventListener("DOMContentLoaded", function() {
-    showSection('ueber-mich');
-  });
-
-  function loadPDF(file, viewerID) {
-    const iframe = document.getElementById(viewerID);
-    iframe.src = file;
-    iframe.style.display = 'block';
-  }
-
-  function downloadDoc() {
-    const password = prompt("Bitte Passwort eingeben:");
-    if(password === "LL_MK$2025") {
-      window.location.href = "Lebenslauf_2025.docx";
-    } else {
-      alert("Falsches Passwort!");
-    }
-  }
-</script>
+</section>
