--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <section id="hobby">
     <div class="container">
       <h2>unser Goldschatz</h2>
-      <img src="Toska.jpg" alt="Toska" style="max-width:100%; height:auto; display:block; margin:0 auto;">
+      <img src="Toska.JPG" alt="Toska" style="max-width:100%; height:auto; display:block; margin:0 auto;">
     </div>
   </section>
 
